# crypto-analyzer-ai

./: .env  .gitignore  AUDIT_LOGGING.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py
config/: agents.yaml  tasks.yaml
core/: redis_client.py  settings.py
core/audit/: __init__.py  decorators.py  logger.py  models.py  queries.py
src/crew/: research.py
src/tools/: binance.py  date.py  duckduckgo.py  google.py  markdown_formatter.py  news.py
