[project]
name = "crypto-analyzer-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai]",
    "ddgs>=9.10.0",
    "google-api-python-client>=2.190.0",
    "langchain-community>=0.4.1",
    "litellm[proxy]>=1.75.3",
    "redis>=5.0",
]
